JVM 16 compat byte serializer, fix short deserialization